Business Logic Implemenation

--- a/src/main/resources/com/example/rms/CustomerLogin.fxml
+++ b/src/main/resources/com/example/rms/CustomerLogin.fxml
@@ -1,83 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rms.CustomerLogin_Controller">
-    <right>
-        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1200.0" style="-fx-background-color: linear-gradient(to bottom, #B4E4F6, #3498db) linear-gradient(to bottom, #B4E4F6, #3498db);" BorderPane.alignment="CENTER">
+<BorderPane prefHeight="753.0" prefWidth="1188.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rms.CustomerLogin_Controller">
+    <center>
+        <!-- Background image or color gradient -->
+        <AnchorPane prefHeight="773.0" prefWidth="1188.0" style="-fx-background-color: linear-gradient(to bottom, #3b6ea6, #609ec8);" BorderPane.alignment="CENTER">
             <children>
-                <Label layoutX="734.0" layoutY="309.0" text="Email">
-                    <font>
-                        <Font name="Berlin Sans FB Demi Bold" size="28.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="email" layoutX="840.0" layoutY="305.0" onKeyReleased="#validateCnic" prefHeight="40.0" prefWidth="230.0" promptText="Enter Email">
-                    <font>
-                        <Font name="Berlin Sans FB" size="18.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="TEXT" />
-                    </cursor>
-                </TextField>
-                <Label layoutX="681.0" layoutY="367.0" text="Password">
-                    <font>
-                        <Font name="Berlin Sans FB Demi Bold" size="28.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="Password" layoutX="840.0" layoutY="363.0" prefHeight="40.0" prefWidth="230.0" promptText="Enter your password">
-                    <font>
-                        <Font name="Berlin Sans FB" size="18.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="TEXT" />
-                    </cursor>
-                </TextField>
-                <Pane prefHeight="680.0" prefWidth="500.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080);">
+                <!-- Semi-transparent background box -->
+                <Pane layoutX="318.0" layoutY="35.0" prefHeight="684.0" prefWidth="641.0" style="-fx-background-color: linear-gradient(to bottom, #021E2F, #000000);">
+                    <effect>
+                        <DropShadow color="#000" offsetX="3" offsetY="3" radius="10" spread="0.5" />
+                    </effect>
                     <children>
-                        <Label layoutX="86.0" layoutY="317.0" text="Customer Login 👨" textFill="WHITE">
+                        <!-- Form elements -->
+                        <Label layoutX="100.0" layoutY="30.0" text="Student Login" textFill="#B0C4DE">
                             <font>
-                                <Font name="Berlin Sans FB Demi Bold" size="40.0" />
+                                <Font name="Arial" size="30.0" />
                             </font>
                         </Label>
+                        <Label layoutX="100.0" layoutY="213.0" text="Email:" textFill="#B0C4DE">
+                            <font>
+                                <Font name="Arial" size="18.0" />
+                            </font>
+                        </Label>
+                        <TextField fx:id="email" layoutX="100.0" layoutY="269.0" prefHeight="40.0" prefWidth="300.0" promptText="Enter Email" />
+                        <Label layoutX="100.0" layoutY="336.0" text="Password:" textFill="#B0C4DE">
+                            <font>
+                                <Font name="Arial" size="18.0" />
+                            </font>
+                        </Label>
+                        <TextField fx:id="Password" layoutX="100.0" layoutY="384.0" prefHeight="40.0" prefWidth="300.0" promptText="Enter your password" />
+                        <Button layoutX="93.0" layoutY="490.0" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: linear-gradient(to bottom, #4169E1, #021E2F); -fx-border-color: #B0C4DE; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-width: 2;" text="Login" textFill="WHITE">
+                            <font>
+                                <Font name="Arial" size="16.0" />
+                            </font>
+                        </Button>
+                        <Hyperlink layoutX="360.0" layoutY="452.0" text="New User?" textFill="#B0C4DE" underline="true" />
+                        <Button layoutX="333.0" layoutY="490.0" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: linear-gradient(to bottom, #4169E1, #021E2F); -fx-border-color: #B0C4DE; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-width: 2;" text="Back" textFill="WHITE" />
                     </children>
                 </Pane>
-                <ImageView fitHeight="252.0" fitWidth="382.0" layoutX="673.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="file:/C:/Users/Hp/Downloads/Train%20Reservation%20System/abc.png" />
-                    </image>
-                </ImageView>
-                <Button layoutX="1062.0" layoutY="609.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#GoToMainPage" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080); -fx-border-color: white; -fx-border-radius: 13; -fx-background-radius: 15; -fx-border-width: 2;" text="Back" textFill="WHITE">
-                    <font>
-                        <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
-                <Hyperlink layoutX="965.0" layoutY="444.0" onAction="#RegisterCustomer1" text="New User?" textAlignment="CENTER" textFill="#940000" underline="true">
-                    <font>
-                        <Font name="Berlin Sans FB" size="18.0" />
-                    </font>
-                </Hyperlink>
-                <Button layoutX="813.0" layoutY="430.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#GoToUserMenu" prefHeight="57.0" prefWidth="145.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080); -fx-border-color: white; -fx-border-radius: 13; -fx-background-radius: 15; -fx-border-width: 2;" text="Login" textFill="WHITE">
-                    <font>
-                        <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
             </children>
         </AnchorPane>
-    </right>
+    </center>
 </BorderPane>
