--- a/src/main/resources/com/example/rms/AdminLogin.fxml
+++ b/src/main/resources/com/example/rms/AdminLogin.fxml
@@ -1,94 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Reflection?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rms.AdminLogin_Controller">
-   <bottom>
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1200.0" style="-fx-background-color: linear-gradient(to bottom,  #B4E4F6, #3498db);" BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fitHeight="221.0" fitWidth="424.0" layoutX="702.0" layoutY="14.0" pickOnBounds="true">
-               <image>
-        <Image url="file:/C:/Users/Hp/Downloads/Train%20Reservation%20System/abc.png" />
-    </image>
-            </ImageView>
-            <Label layoutX="702.0" layoutY="289.0" prefHeight="48.0" prefWidth="171.0" text="Username" textFill="#002080">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="35.0" />
-               </font>
-            </Label>
-            <Label layoutX="703.0" layoutY="353.0" prefHeight="40.0" prefWidth="152.0" text="Password" textFill="#002080">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="35.0" />
-               </font>
-            </Label>
-            <TextField fx:id="NameOfUser" layoutX="902.0" layoutY="296.0" promptText="Username">
-               <font>
-     <Font name="Berlin Sans FB" size="18.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor></TextField>
-            <TextField fx:id="passcode" layoutX="902.0" layoutY="357.0" promptText="Password">
-               <font>
-                  <Font name="Berlin Sans FB" size="18.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor></TextField>
-            <Button fx:id="butLog1" alignment="CENTER" defaultButton="true" layoutX="948.0" layoutY="431.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#Admin_Button_Submit" prefHeight="48.0" prefWidth="130.0" style="-fx-background-color: #010050, #002080; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-color: white; -fx-border-width: 2;" text="Log In" textFill="WHITE">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-               <effect>
-     <Reflection fraction="0.65" topOpacity="0.09" />
-               </effect>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </Button>
-            <Pane prefHeight="680.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080);">
-               <children>
-                  <Label layoutX="48.0" layoutY="240.0" prefHeight="82.0" prefWidth="516.0" text="Admin Login" textFill="WHITE">
-                     <font>
-                        <Font name="Berlin Sans FB Demi Bold" size="70.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="452.0" layoutY="219.0" text="👨🏼‍🏫" textFill="WHITE">
-                     <font>
-                        <Font size="70.0" />
-                     </font>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Label>
- <Text fill="WHITE" layoutX="111.0" layoutY="367.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You can manage everything 😊" textAlignment="CENTER">
-                     <font>
-                        <Font name="Berlin Sans FB" size="30.0" />
-                     </font>
-                  </Text>
-               </children>
-            </Pane>
-            <Button layoutX="1060.0" layoutY="607.0" mnemonicParsing="false" onAction="#GoToMainPage" prefHeight="38.0" prefWidth="98.0" style="-fx-background-color: #010050, #002080; -fx-background-radius: 20; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 20;" text="Back" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="18.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
-   </bottom>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="680.0" minWidth="1200.0" prefHeight="680.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rms.AdminLogin_Controller">
+    <bottom>
+        <AnchorPane minHeight="680.0" minWidth="1200.0" prefHeight="680.0" prefWidth="1200.0" style="-fx-background-color: #f0f0f0;" BorderPane.alignment="CENTER">
+            <children>
+                <AnchorPane layoutX="-22.0" layoutY="-46.0" prefHeight="769.0" prefWidth="1251.0" style="-fx-background-color: #3498db;">
+                    <children>
+                  <Pane layoutX="474.0" layoutY="133.0" prefHeight="491.0" prefWidth="581.0" style="-fx-background-color: linear-gradient(to bottom, #3b6ea6, #609ec8); -fx-background-radius: 20;">
+                     <children>
+                        <Label layoutX="37.0" layoutY="26.0" prefHeight="48.0" prefWidth="386.0" text="Login" textAlignment="CENTER" textFill="#283c5b">
+                           <font>
+                              <Font name="Arial" size="40.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                        <Label layoutX="44.0" layoutY="69.0" prefHeight="48.0" prefWidth="1176.0" text="Admin Login" textAlignment="CENTER" textFill="WHITE">
+                            <font>
+                                <Font name="Arial" size="40.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="532.0" layoutY="272.0" prefHeight="22.0" prefWidth="200.0" text="Username" textFill="WHITE">
+                            <font>
+                                <Font name="Arial" size="18.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="532.0" layoutY="367.0" prefHeight="22.0" prefWidth="200.0" text="Password" textFill="WHITE">
+                            <font>
+                                <Font name="Arial" size="18.0" />
+                            </font>
+                        </Label>
+                        <TextField fx:id="NameOfUser" layoutX="715.0" layoutY="263.0" prefHeight="40.0" prefWidth="300.0" promptText="Username">
+                            <font>
+                                <Font name="Arial" size="16.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="TEXT" />
+                            </cursor>
+                        </TextField>
+                        <TextField fx:id="passcode" layoutX="715.0" layoutY="358.0" prefHeight="40.0" prefWidth="300.0" promptText="Password">
+                            <font>
+                                <Font name="Arial" size="16.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="TEXT" />
+                            </cursor>
+                        </TextField>
+                        <Button fx:id="butLog1" alignment="CENTER" defaultButton="true" layoutX="715.0" layoutY="444.0" mnemonicParsing="false" onAction="#Admin_Button_Submit" prefHeight="40.0" prefWidth="130.0" style="-fx-background-color: #2980b9; -fx-background-radius: 20; -fx-border-color: transparent; -fx-border-width: 0;" text="Log In" textFill="WHITE">
+                            <font>
+                                <Font name="Arial" size="18.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                            <effect>
+                                <DropShadow />
+                            </effect>
+                        </Button>
+                        <Text fill="WHITE" layoutX="715.0" layoutY="564.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You can manage everything 😊" textAlignment="CENTER">
+                            <font>
+                                <Font name="Arial" size="16.0" />
+                            </font>
+                        </Text>
+                        <Button layoutX="935.0" layoutY="449.0" mnemonicParsing="false" onAction="#GoToMainPage" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #2980b9; -fx-background-radius: 20; -fx-border-color: transparent; -fx-border-width: 0;" text="Back" textAlignment="CENTER" textFill="WHITE">
+                            <font>
+                                <Font name="Arial" size="14.0" />
+                            </font>
+                        </Button>
+                    </children>
+                </AnchorPane>
+            </children>
+        </AnchorPane>
+    </bottom>
 </BorderPane>
