--- a/src/main/resources/com/example/rms/CustomerMenu.fxml
+++ b/src/main/resources/com/example/rms/CustomerMenu.fxml
@@ -2,71 +2,65 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rms.UserMenu">
-   <top>
-      <AnchorPane prefHeight="425.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom,  #B4E4F6, #3498db);" BorderPane.alignment="CENTER">
-         <children>
-            <Pane prefHeight="680.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080);">
-               <children>
-                  <Label layoutX="42.0" layoutY="259.0" prefHeight="70.0" prefWidth="516.0" text="Welcome Customer 👨" textFill="WHITE">
+   <left>
+        <AnchorPane prefHeight="680.0" prefWidth="1200.0" style="-fx-background-color: #2c3e50;" BorderPane.alignment="CENTER">
+            <children>
+            <Pane layoutX="-3.0" layoutY="-5.0" prefHeight="688.0" prefWidth="516.0" style="-fx-background-color: linear-gradient(to bottom, #3b6ea6, #609ec8);" />
+                <!-- White Background Box -->
+                <VBox layoutX="150.0" layoutY="380.0" spacing="20" />
+
+                   <!-- Buttons -->
+                <Button fx:id="bookTicketButton" layoutX="539.0" layoutY="206.0" mnemonicParsing="false" onAction="#ProceedToTicketBooking" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #4169E1, #021E2F); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Book Ticket">
+                    <font>
+                        <Font name="Berlin Sans FB Demi Bold" size="20.0" />
+                    </font>
+                </Button>
+                <Button fx:id="cancelTicketButton" layoutX="827.0" layoutY="206.0" mnemonicParsing="false" onAction="#ProceedToTicketCancellation" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #4169E1, #021E2F); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Cancel Ticket">
+                    <font>
+                        <Font name="Berlin Sans FB Demi Bold" size="20.0" />
+                    </font>
+                </Button>
+                <Button fx:id="seatChangeButton" layoutX="546.0" layoutY="296.0" mnemonicParsing="false" onAction="#ProceedToSeatChange" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #4169E1, #021E2F); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Request Seat Change">
+                    <font>
+                        <Font name="Berlin Sans FB Demi Bold" size="20.0" />
+                    </font>
+                </Button>
+                <Button fx:id="checkFareButton" layoutX="827.0" layoutY="296.0" mnemonicParsing="false" onAction="#ChkFare" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #4169E1, #021E2F); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Check Fare">
+                    <font>
+                        <Font name="Berlin Sans FB Demi Bold" size="20.0" />
+                    </font>
+                </Button>
+                <Button fx:id="registerComplaintButton" layoutX="690.0" layoutY="413.0" mnemonicParsing="false" onAction="#Complaints" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #4169E1, #021E2F); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Register Complaint">
+                    <font>
+                        <Font name="Berlin Sans FB Demi Bold" size="20.0" />
+                    </font>
+                </Button>
+                <Button fx:id="backButton" layoutX="1060.0" layoutY="607.0" mnemonicParsing="false" onAction="#RegisterCustomer" prefHeight="38.0" prefWidth="98.0" style="-fx-background-color: linear-gradient(to bottom, #4169E1, #021E2F); -fx-background-radius: 20; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 20;" text="Back" textFill="WHITE">
+                    <font>
+                        <Font name="Berlin Sans FB Demi Bold" size="20.0" />
+                    </font>
+                </Button>
+                 <!-- Title Label -->
+                 <Label layoutX="14.0" layoutY="251.0" prefHeight="70.0" prefWidth="516.0" text="Welcome Customer 👨" textFill="WHITE">
                      <font>
-                        <Font name="Berlin Sans FB Demi Bold" size="52.0" />
-         </font>
-                  </Label>
-                  <Text fill="WHITE" layoutX="80.0" layoutY="359.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Travel with Ease &amp; Comfort. 🚈" textAlignment="CENTER" wrappingWidth="440.9999656677246">
-                     <font>
-                        <Font name="Berlin Sans FB Demi Bold" size="21.0" />
+                         <Font name="Berlin Sans FB Demi Bold" size="40.0" />
                      </font>
-                  </Text>
-               </children></Pane>
-            <Button fx:id="bookTicketButton" layoutX="689.0" layoutY="348.0" mnemonicParsing="false" onAction="#ProceedToTicketBooking" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Book Ticket">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button fx:id="cancelTicketButton" layoutX="945.0" layoutY="348.0" mnemonicParsing="false" onAction="#ProceedToTicketCancellation" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Cancel Ticket">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-               </font>
-                               </Button>
-            <Label layoutX="689.0" layoutY="230.0" prefHeight="27.0" prefWidth="454.0" text="Click one of the options below to continue 😊" textFill="#130063">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="22.0" />
-               </font>
-            </Label>
-            <Button fx:id="seatChangeButton" layoutX="689.0" layoutY="427.0" mnemonicParsing="false" onAction="#ProceedToSeatChange" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Request Seat Change">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="284.0" fitWidth="474.0" layoutX="689.0" layoutY="-54.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-<!--        <Image url="file:/C:/Users/Hp/Downloads/Train%20Reservation%20System/abc.png" />-->
-    </image>
-   </ImageView>
-            <Button layoutX="945.0" layoutY="427.0" mnemonicParsing="false" onAction="#ChkFare" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Check Fare" textFill="WHITE">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-               </font>
-            </Button>
-  <Button layoutX="1060.0" layoutY="607.0" mnemonicParsing="false" onAction="#RegisterCustomer" prefHeight="38.0" prefWidth="98.0" style="-fx-background-color: #010050, #002080; -fx-background-radius: 20; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 20;" text="Back" textAlignment="CENTER" textFill="WHITE">               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Button layoutX="815.0" layoutY="507.0" mnemonicParsing="false" onAction="#Complaints" prefHeight="50.0" prefWidth="216.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080); -fx-background-radius: 15; -fx-text-fill: white; -fx-border-color: white; -fx-border-radius: 15;" text="Register Complaint">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
- </top>
+                 </Label>
+                 <!-- Subtitle Text -->
+                 <Text fill="WHITE" layoutX="50.0" layoutY="430.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Travel with Ease &amp; Comfort. 🚈" textAlignment="CENTER" wrappingWidth="400.0">
+                     <font>
+                         <Font name="Berlin Sans FB Demi Bold" size="18.0" />
+                     </font>
+                 </Text>
+            </children>
+        </AnchorPane>
+   </left>
 </BorderPane>
