--- a/src/main/resources/com/example/rms/Register.fxml
+++ b/src/main/resources/com/example/rms/Register.fxml
@@ -1,100 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rms.Register_Controller">
-   <right>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1200.0" style="-fx-background-color: linear-gradient(to bottom,  #B4E4F6, #3498db) linear-gradient(to bottom,  #B4E4F6, #3498db);" BorderPane.alignment="CENTER">
-         <children>
-   <Label layoutX="732.0" layoutY="255.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="82.0" text="Name">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="28.0" />
-               </font>
-            </Label>
-            <Label layoutX="741.0" layoutY="375.0" text="Email">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="28.0" />
-               </font>
-            </Label>
-            <TextField fx:id="fullName" layoutX="847.0" layoutY="257.0" prefHeight="40.0" prefWidth="230.0" promptText="Your Full Name">
-               <font>
-                  <Font name="Berlin Sans FB" size="18.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor></TextField>
-            <TextField fx:id="email" layoutX="847.0" layoutY="371.0" prefHeight="40.0" prefWidth="230.0" promptText="Your University Email">
-               <font>
-                  <Font name="Berlin Sans FB" size="18.0" />
-               </font>
-                 <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor></TextField>
-            <Button fx:id="registerButton" layoutX="799.0" layoutY="499.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#CustomerRegistered" prefHeight="50.0" prefWidth="130.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080); -fx-border-color: white; -fx-border-radius: 13; -fx-background-radius: 15; -fx-border-width: 2;" text="Register" textFill="WHITE">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Label layoutX="688.0" layoutY="433.0" text="Password">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="28.0" />
-               </font>
-            </Label>
-            <Label layoutX="619.0" layoutY="314.0" prefHeight="34.0" prefWidth="189.0" text="Phone Number">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="28.0" />
-               </font>
-            </Label>
-              <TextField fx:id="password" layoutX="847.0" layoutY="429.0" prefHeight="40.0" prefWidth="230.0" promptText="Your password">
-               <font>
-                  <Font name="Berlin Sans FB" size="18.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor></TextField>
-            <TextField fx:id="phoneNum" layoutX="847.0" layoutY="314.0" prefHeight="40.0" prefWidth="230.0" promptText="3xxxxxxxxx">
-               <font>
-                  <Font name="Berlin Sans FB" size="18.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor></TextField>
-            <Pane prefHeight="680.0" prefWidth="500.0" style="-fx-background-color: linear-gradient(to bottom, #010050, #002080);">
-               <children>
-                  <Label layoutX="27.0" layoutY="317.0" text="Customer Registration 👨" textFill="WHITE">
-                     <font>
-                        <Font name="Berlin Sans FB Demi Bold" size="40.0" />
-                     </font>
-                  </Label>
-               </children>
-                 </Pane>
-            <ImageView fitHeight="252.0" fitWidth="382.0" layoutX="673.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true">
-                      <image>
-        <Image url="file:/C:/Users/Hp/Downloads/Train%20Reservation%20System/abc.png" />
-    </image>
-
-
-            </ImageView>
-            <Button layoutX="1060.0" layoutY="607.0" mnemonicParsing="false" onAction="#RegisterCustomer" prefHeight="38.0" prefWidth="98.0" style="-fx-background-color: #010050, #002080; -fx-background-radius: 20; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 20;" text="Back" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="20.0" />
-               </font>
-            </Button>
-            <Label fx:id="Invalid_Email" layoutX="973.0" layoutY="504.0" prefHeight="36.0" prefWidth="213.0">
-               <font>
-                  <Font name="Berlin Sans FB Demi Bold" size="15.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
-   </right>
+    <right>
+        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1200.0" style="-fx-background-color: linear-gradient(to bottom, #2C3E50, #1B4F72);" BorderPane.alignment="CENTER">
+            <children>
+                <!-- Title Pane -->
+                <Pane prefHeight="100.0" prefWidth="1200.0" style="-fx-background-color: linear-gradient(to bottom, #1B4F72, #21618C);">
+                    <children>
+                        <Label layoutX="27.0" layoutY="30.0" text="Student Registration" textFill="WHITE">
+                            <font>
+                                <Font name="Arial Black" size="36.0" />
+                            </font>
+                        </Label>
+                    </children>
+                </Pane>
+                <!-- Form Pane -->
+                <Pane layoutX="50.0" layoutY="150.0" prefHeight="480.0" prefWidth="1100.0" style="-fx-background-color: #21618C; -fx-background-radius: 10px;">
+                    <children>
+                        <!-- Name Field -->
+                        <Label layoutX="50.0" layoutY="50.0" text="Name" />
+                        <TextField fx:id="fullName" layoutX="200.0" layoutY="50.0" prefHeight="40.0" prefWidth="300.0" promptText="Your Full Name" />
+                        <!-- Email Field -->
+                        <Label layoutX="50.0" layoutY="120.0" text="Email" />
+                        <TextField fx:id="email" layoutX="200.0" layoutY="120.0" prefHeight="40.0" prefWidth="300.0" promptText="Your University Email" />
+                        <!-- Password Field -->
+                        <Label layoutX="50.0" layoutY="190.0" text="Password" />
+                        <TextField fx:id="password" layoutX="200.0" layoutY="190.0" prefHeight="40.0" prefWidth="300.0" promptText="Your password" />
+                        <!-- Phone Number Field -->
+                        <Label layoutX="50.0" layoutY="260.0" text="Phone Number" />
+                        <TextField fx:id="phoneNum" layoutX="200.0" layoutY="260.0" prefHeight="40.0" prefWidth="300.0" promptText="3xxxxxxxxx" />
+                        <!-- Register Button -->
+                        <Button fx:id="registerButton" layoutX="250.0" layoutY="350.0" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to bottom, #3498db, #2980b9); -fx-text-fill: white;" text="Register" />
+                        <!-- Invalid Email Label -->
+                        <Label fx:id="Invalid_Email" layoutX="250.0" layoutY="420.0" text="Invalid Email" textFill="RED" />
+                      <!-- Back Button -->
+                      <Button layoutX="950.0" layoutY="426.0" mnemonicParsing="false" onAction="#RegisterCustomer" prefHeight="38.0" prefWidth="98.0" style="-fx-background-color: linear-gradient(to bottom, #1B4F72, #21618C); -fx-background-radius: 20; -fx-border-color: white; -fx-border-width: 2; -fx-border-radius: 20;" text="Back" textFill="WHITE" />
+                    </children>
+                </Pane>
+            </children>
+        </AnchorPane>
+    </right>
 </BorderPane>
